--- a/src/main/resources/com/example/projeto2_desktop/EmbarcacaoItemView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/EmbarcacaoItemView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="900.0" style="-fx-border-radius: 10; -fx-border-color: #29296b; -fx-background-radius: 100;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Embarcacao.EmbarcacaoItemController">
    <children>
@@ -14,16 +15,25 @@
          <HBox.margin>
             <Insets left="25.0" right="25.0" />
          </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font>
       </Label>
       <Label fx:id="titularText" prefWidth="200.0" text="Label">
          <HBox.margin>
             <Insets right="25.0" />
          </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font>
       </Label>
       <Label fx:id="comprimentoText" prefWidth="200.0" text="Label">
          <HBox.margin>
             <Insets right="50.0" />
          </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font>
       </Label>
       <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#editEmbarcacao" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
