--- a/src/main/resources/com/example/projeto2_desktop/MarinaEditarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/MarinaEditarView.fxml
@@ -20,7 +20,7 @@
          <children>
             <Label prefHeight="35.0" prefWidth="39.0" text="Nome:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" />
@@ -28,7 +28,7 @@
             </Label>
             <Label prefHeight="35.0" prefWidth="68.0" text="Localidade:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
@@ -36,7 +36,7 @@
             </Label>
             <Label prefHeight="35.0" prefWidth="86.0" text="Código Postal:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
@@ -50,16 +50,25 @@
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="localidadeText" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="codPostText" prefHeight="35.0" prefWidth="444.0" promptText="Código Postal" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
          </children>
       </VBox>
@@ -86,16 +95,25 @@
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="localidade" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="codPostal" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
          </children>
       </VBox>
