--- a/src/main/resources/com/example/projeto2_desktop/AgendamentoView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/AgendamentoView.fxml
@@ -288,8 +288,14 @@
                            <font>
                               <Font name="Calibri Bold" size="12.0" />
                            </font></Button>
-                        <Label fx:id="year" alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="150.0" text="Label" />
-                        <Label fx:id="month" alignment="CENTER" layoutX="62.0" layoutY="10.0" prefHeight="100.0" prefWidth="150.0" text="Label" />
+                        <Label fx:id="year" alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="150.0" text="Label">
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font></Label>
+                        <Label fx:id="month" alignment="CENTER" layoutX="62.0" layoutY="10.0" prefHeight="100.0" prefWidth="150.0" text="Label">
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font></Label>
                         <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#forwardOneMonth" stylesheets="@../../../CSS/Marine.css" text="&gt;">
                            <font>
                               <Font name="Calibri Bold" size="12.0" />
@@ -298,6 +304,9 @@
                            <HBox.margin>
                               <Insets left="120.0" right="80.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Button>
                      </children>
                   </HBox>
@@ -307,36 +316,57 @@
                            <HBox.margin>
                               <Insets left="155.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" prefWidth="100.0" text="Seg" HBox.hgrow="ALWAYS">
                            <HBox.margin>
                               <Insets left="115.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="38.0" layoutY="10.0" prefWidth="100.0" text="Ter" HBox.hgrow="ALWAYS">
                            <HBox.margin>
                               <Insets left="115.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="66.0" layoutY="10.0" prefWidth="100.0" text="Qua">
                            <HBox.margin>
                               <Insets left="115.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="94.0" layoutY="10.0" prefWidth="100.0" text="Qui">
                            <HBox.margin>
                               <Insets left="115.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="122.0" layoutY="10.0" prefWidth="100.0" text="Sex">
                            <HBox.margin>
                               <Insets left="115.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <Label alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="52.0" prefWidth="100.0" text="Sab">
                            <HBox.margin>
                               <Insets left="115.0" right="100.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Calibri" size="14.0" />
+                           </font>
                         </Label>
                         <VBox prefHeight="200.0" prefWidth="100.0" />
                      </children>
