--- a/src/main/resources/com/example/projeto2_desktop/EmbarcacaoNovaView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/EmbarcacaoNovaView.fxml
@@ -16,15 +16,18 @@
             <Font name="Georgia Bold" size="96.0" />
          </font>
       </Label>
-      <TextField fx:id="nomeText" layoutX="164.0" layoutY="105.0" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/Marine.css" />
+      <TextField fx:id="nomeText" layoutX="164.0" layoutY="105.0" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/Marine.css">
+         <font>
+            <Font size="14.0" />
+         </font></TextField>
       <Label layoutX="115.0" layoutY="107.0" prefHeight="34.0" text="Nome:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="114.0" layoutY="155.0" prefHeight="32.0" text="Titular:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
       <Button layoutX="222.0" layoutY="318.0" mnemonicParsing="false" onAction="#CriarEmbarcacao" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Embarcação">
@@ -37,15 +40,18 @@
       </Button>
       <Label layoutX="111.0" layoutY="205.0" prefHeight="33.0" text="Marina:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="75.0" layoutY="255.0" prefHeight="33.0" text="Comprimento:">
+      <Label layoutX="65.0" layoutY="255.0" prefHeight="33.0" text="Comprimento:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="errorText" layoutX="145.0" layoutY="289.0" prefHeight="18.0" prefWidth="446.0" textFill="#ff0000" />
+      <Label fx:id="errorText" layoutX="145.0" layoutY="289.0" prefHeight="18.0" prefWidth="446.0" textFill="#ff0000">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="162.0" layoutY="10.0" prefHeight="90.0" prefWidth="392.0" text="Nova Embarcação" AnchorPane.leftAnchor="162.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font name="Calibri Bold" size="50.0" />
