--- a/src/main/resources/com/example/projeto2_desktop/ExtraAdicionarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ExtraAdicionarView.fxml
@@ -32,17 +32,29 @@
                <HBox.margin>
                   <Insets left="70.0" right="30.0" />
                </HBox.margin>
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
             </Label>
             <Label text="Preço">
                <HBox.margin>
                   <Insets left="30.0" right="30.0" />
                </HBox.margin>
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
             </Label>
-            <Label text="Preço Total" />
+            <Label text="Preço Total">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font></Label>
             <Label text="Qtd">
                <HBox.margin>
                   <Insets left="80.0" />
                </HBox.margin>
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
             </Label>
          </children>
       </HBox>
