--- a/src/main/resources/com/example/projeto2_desktop/ExtraItemView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ExtraItemView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="397.0" style="-fx-border-radius: 10; -fx-border-color: #29296b; -fx-background-radius: 10; -fx-background-color: #FFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Extra.ExtraItemController">
    <children>
@@ -14,16 +15,25 @@
          <HBox.margin>
             <Insets left="5.0" right="25.0" />
          </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font>
       </Label>
       <Label fx:id="preco" prefHeight="18.0" prefWidth="37.0" text="0">
          <HBox.margin>
             <Insets right="25.0" />
          </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font>
       </Label>
       <Label fx:id="precoTotal" prefHeight="18.0" prefWidth="37.0" text="0">
          <HBox.margin>
             <Insets right="50.0" />
-         </HBox.margin></Label>
+         </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font></Label>
       <ImageView fx:id="plusButton" fitHeight="40.0" fitWidth="20.0" onMouseClicked="#add" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
             <Insets left="10.0" right="20.0" />
@@ -39,6 +49,9 @@
          <HBox.margin>
             <Insets />
          </HBox.margin>
+         <font>
+            <Font name="Calibri" size="14.0" />
+         </font>
       </Label>
       <ImageView fx:id="minusButton" fitHeight="40.0" fitWidth="20.0" onMouseClicked="#subtract" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
