--- a/src/main/resources/com/example/projeto2_desktop/FuncionarioEditarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/FuncionarioEditarView.fxml
@@ -19,81 +19,81 @@
       </Label>
       <VBox alignment="TOP_RIGHT" layoutX="62.0" layoutY="85.0" prefHeight="492.0" prefWidth="100.0">
          <children>
-            <Label prefHeight="35.0" prefWidth="39.0" text="Nome:">
+            <Label prefHeight="35.0" text="Nome:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="36.0" text="Email:">
+            <Label prefHeight="35.0" text="Email:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="54.0" text="Telefone:">
+            <Label prefHeight="35.0" text="Telefone:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="26.0" text="NIF:">
+            <Label prefHeight="35.0" text="NIF:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="28.0" text="Rua:">
+            <Label prefHeight="35.0" text="Rua:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="34.0" text="Porta:">
+            <Label prefHeight="35.0" text="Porta:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="68.0" text="Localidade:">
+            <Label prefHeight="35.0" text="Localidade:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="86.0" text="Código Postal:">
+            <Label prefHeight="35.0" text="Código Postal:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="62.0" text="Username:">
+            <Label prefHeight="35.0" text="Username:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="58.0" text="Password:">
+            <Label prefHeight="35.0" text="Password:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Calibri Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
@@ -107,51 +107,81 @@
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="emailText" prefHeight="35.0" prefWidth="444.0" promptText="Email" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="telefoneText" prefHeight="35.0" prefWidth="444.0" promptText="Telefone" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="nifText" prefHeight="35.0" prefWidth="444.0" promptText="NIF" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="portaText" prefHeight="35.0" prefWidth="444.0" promptText="Porta" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="ruaText" prefHeight="35.0" prefWidth="444.0" promptText="Rua" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="localidadeText" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="codPostText" prefHeight="35.0" prefWidth="444.0" promptText="Código Postal" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <TextField fx:id="usernameText" prefHeight="35.0" prefWidth="444.0" promptText="Username" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <PasswordField fx:id="passwordText" prefHeight="35.0" prefWidth="444.0" promptText="Password" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </PasswordField>
          </children>
       </VBox>
@@ -178,51 +208,81 @@
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="email" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="telefone" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="nif" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="rua" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="porta" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="localidade" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="codPostal" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="username" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
             <Label fx:id="password" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Label>
          </children>
       </VBox>
