--- a/src/main/resources/com/example/projeto2_desktop/FuncionarioNovoView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/FuncionarioNovoView.fxml
@@ -19,12 +19,12 @@
       <TextField fx:id="nomeText" layoutX="164.0" layoutY="105.0" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/TextField.css" />
       <Label layoutX="115.0" layoutY="107.0" prefHeight="34.0" prefWidth="39.0" text="Nome:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="114.0" layoutY="155.0" prefHeight="32.0" prefWidth="36.0" text="Email:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Button layoutX="212.0" layoutY="618.0" mnemonicParsing="false" onAction="#CriarFuncionario" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Funcionário">
@@ -38,37 +38,37 @@
       <PasswordField fx:id="passwordText" layoutX="163.0" layoutY="554.0" prefHeight="35.0" prefWidth="444.0" promptText="Password" stylesheets="@../../../CSS/TextField.css" />
       <Label layoutX="101.0" layoutY="205.0" prefHeight="33.0" prefWidth="54.0" text="Telefone:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="125.0" layoutY="255.0" prefHeight="33.0" prefWidth="26.0" text="NIF:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="117.0" layoutY="355.0" prefHeight="34.0" prefWidth="28.0" text="Rua:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="114.0" layoutY="405.0" prefHeight="35.0" prefWidth="34.0" text="Porta:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="65.0" layoutY="455.0" prefHeight="37.0" prefWidth="86.0" text="Código Postal:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="92.0" layoutY="555.0" prefHeight="34.0" prefWidth="58.0" text="Password:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="90.0" layoutY="505.0" prefHeight="35.0" prefWidth="62.0" text="Username:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <Label fx:id="errorText" layoutX="145.0" layoutY="589.0" prefHeight="18.0" prefWidth="446.0" textFill="#ff0000" />
@@ -81,7 +81,7 @@
       <TextField fx:id="usernameText" layoutX="164.0" layoutY="505.0" prefHeight="35.0" prefWidth="444.0" promptText="Username" stylesheets="@../../../CSS/TextField.css" />
       <Label layoutX="83.0" layoutY="305.0" prefHeight="34.0" prefWidth="68.0" text="Localidade:">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
       <TextField fx:id="localidadeText" layoutX="164.0" layoutY="305.0" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/TextField.css" />
