--- a/src/main/resources/com/example/projeto2_desktop/FaturaView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/FaturaView.fxml
@@ -2,10 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="825.0" prefWidth="1525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Funcionario.FuncionarioController">
+<AnchorPane prefHeight="825.0" prefWidth="1525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Fatura.FaturaController">
    <children>
       <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -69,7 +67,7 @@
                               </ImageView>
                               <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#manageFaturas" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../Images/Invoice.png" />
+                                    <Image url="@../../../Images/OnInvoice.png" />
                                  </image>
                                  <VBox.margin>
                                     <Insets bottom="20.0" left="5.0" right="5.0" />
@@ -91,7 +89,7 @@
                               </ImageView>
                               <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#manageFuncionarios" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../Images/OnEmployee.png" />
+                                    <Image url="@../../../Images/Employee.png" />
                                  </image>
                                  <VBox.margin>
                                     <Insets bottom="20.0" left="5.0" right="5.0" />
@@ -188,7 +186,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Label>
-                  <Label onMouseClicked="#manageFaturas" prefHeight="50.0" prefWidth="300.0" text="Gerir Faturas" textFill="#f7f6f6">
+                  <Label onMouseClicked="#manageFaturas" prefHeight="50.0" prefWidth="300.0" text="Gerir Faturas" textFill="#f59905">
                      <font>
                         <Font size="21.0" />
                      </font>
@@ -199,7 +197,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Label>
-                  <Label onMouseClicked="#manageClientes" prefHeight="50.0" prefWidth="300.0" text="Gerir Clientes" textFill="#f4f3f0">
+                  <Label onMouseClicked="#manageClientes" prefHeight="50.0" prefWidth="300.0" text="Gerir Clientes" textFill="#fffffe">
                      <font>
                         <Font size="21.0" />
                      </font>
@@ -210,7 +208,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Label>
-                  <Label onMouseClicked="#manageFuncionarios" prefHeight="50.0" prefWidth="300.0" text="Gerir Funcionários" textFill="#f59905">
+                  <Label onMouseClicked="#manageFuncionarios" prefHeight="50.0" prefWidth="300.0" text="Gerir Funcionários" textFill="#f7f6f6">
                      <font>
                         <Font size="21.0" />
                      </font>
@@ -275,71 +273,45 @@
             </VBox>
             <VBox fx:id="pane2" alignment="TOP_CENTER" style="-fx-background-color: #FFFF;">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="62.0" prefWidth="1444.0" text="Funcionários">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="92.0" prefWidth="1444.0" text="Faturas">
                      <font>
                         <Font name="Calibri Bold" size="50.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="1444.0">
-                     <children>
-                        <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#Search" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../Images/Search.png" />
-                           </image>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                           <HBox.margin>
-                              <Insets left="100.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <TextField fx:id="searchField" prefHeight="40.0" prefWidth="256.0" promptText="Pesquisar por Funcionário" stylesheets="@../../../CSS/Marine.css">
-                           <HBox.margin>
-                              <Insets right="200.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Calibri" size="14.0" />
-                           </font>
-                        </TextField>
-                        <Button fx:id="novoButton" alignment="CENTER" mnemonicParsing="false" onAction="#createNovoFuncionario" prefHeight="40.0" prefWidth="300.0" stylesheets="@../../../CSS/Marine.css" text="Novo Funcionário">
-                           <HBox.margin>
-                              <Insets left="120.0" right="250.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Calibri" size="14.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox alignment="BOTTOM_CENTER" focusTraversable="true" prefHeight="62.0" prefWidth="1444.0">
+                  <HBox alignment="BOTTOM_LEFT" focusTraversable="true" prefHeight="62.0" prefWidth="1444.0">
                      <children>
                         <Label text="Nome">
                            <HBox.margin>
-                              <Insets left="100.0" right="175.0" />
+                              <Insets left="320.0" />
                            </HBox.margin>
                            <font>
                               <Font name="Calibri" size="14.0" />
                            </font>
                         </Label>
-                        <Label text="Telefone">
+                        <Label text="Data de Criação">
                            <HBox.margin>
-                              <Insets left="10.0" right="100.0" />
+                              <Insets left="175.0" />
                            </HBox.margin>
                            <font>
                               <Font name="Calibri" size="14.0" />
                            </font>
                         </Label>
-                        <Label text="Email">
+                        <Label text="Data de Prazo">
                            <HBox.margin>
-                              <Insets left="10.0" right="100.0" />
+                              <Insets left="60.0" />
                            </HBox.margin>
                            <font>
                               <Font name="Calibri" size="14.0" />
                            </font>
                         </Label>
-                        <Label text="NIF">
+                        <Label text="Valor">
                            <HBox.margin>
-                              <Insets left="60.0" right="50.0" />
+                              <Insets left="65.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Estado">
+                           <HBox.margin>
+                              <Insets left="115.0" />
                            </HBox.margin>
                            <font>
                               <Font name="Calibri" size="14.0" />
@@ -347,7 +319,7 @@
                         </Label>
                         <Label text="Ações">
                            <HBox.margin>
-                              <Insets left="130.0" right="100.0" />
+                              <Insets left="110.0" />
                            </HBox.margin>
                            <font>
                               <Font name="Calibri" size="14.0" />
@@ -358,8 +330,8 @@
                   <HBox alignment="CENTER" prefHeight="688.0" prefWidth="1444.0">
                      <children>
                         <ScrollPane fx:id="scroll" prefHeight="685.0" prefWidth="1166.0" style="-fx-border-color: #FFFF;">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="685.0">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="685.0">
                                  <children>
                                     <VBox fx:id="list" alignment="TOP_CENTER" prefHeight="688.0" prefWidth="1166.0" style="-fx-background-color: #FFFF;">
                                        <padding>
@@ -368,7 +340,7 @@
                                     </VBox>
                                  </children>
                               </AnchorPane>
-                          </content>
+                           </content>
                         </ScrollPane>
                      </children>
                   </HBox>
