--- a/src/main/resources/com/example/projeto2_desktop/FuncionarioEditarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/FuncionarioEditarView.fxml
@@ -101,7 +101,7 @@
             </Label>
          </children>
       </VBox>
-      <VBox fx:id="editVbox" layoutX="172.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0">
+      <VBox fx:id="editVbox" layoutX="172.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0" visible="false">
          <children>
             <TextField fx:id="nomeText" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
@@ -202,7 +202,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <VBox fx:id="infoVbox" layoutX="182.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0" visible="false">
+      <VBox fx:id="infoVbox" layoutX="182.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0">
          <children>
             <Label fx:id="nome" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
