change title and button MarinaEditarView.fxml

--- a/src/main/resources/com/example/projeto2_desktop/MarinaEditarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/MarinaEditarView.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="370.0" prefWidth="675.0" style="-fx-background-color: #FFFF;" stylesheets="@../../../CSS/Marine.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Marina.MarinaEditarController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutY="-4.0" prefHeight="78.0" prefWidth="675.0" text="Editar Marina">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutY="-4.0" prefHeight="78.0" prefWidth="675.0" text="Detalhes Marina">
          <font>
             <Font name="Calibri Bold" size="50.0" />
          </font>
@@ -72,7 +72,7 @@
             </TextField>
          </children>
       </VBox>
-      <Button fx:id="editarButton" layoutX="194.0" layoutY="269.0" mnemonicParsing="false" onAction="#editar" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Editar">
+      <Button fx:id="editarButton" layoutX="194.0" layoutY="269.0" mnemonicParsing="false" onAction="#editar" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Editar Marina">
          <font>
             <Font size="21.0" />
          </font>
